# lms_project

./: Dockerfile  backup.sql  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
education_app/: apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education_app/migrations/: 0001_initial.py  0002_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_remove_subscription_is_active_and_more.py
payment_app/: models.py  serializers.py  urls.py  views.py
payment_app/management/commands/: add_pm.py
payment_app/migrations/: 0001_initial.py  0002_remove_payment_paid_object_payment_paid_course_and_more.py  0003_payment_stripe_id.py
users_app/: models.py  tasks.py  urls.py
users_app/management/commands/: create_su.py
users_app/migrations/: 0001_initial.py
